--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>React Webpack Node </title>
+	<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,500,600,700' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css">
+	<title>Kartel folks - Front End Developer</title>
 </head>
 <body>
-	<div id="root"></div>
-	<script type="text/javascript" src="bundle.js" charset="utf-8"></script>
+	<div id="app"></div>
+	<script src="bundle.js"></script>
 </body>
 </html>
