--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 	<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,400,500,600,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css">
-	<title>Kartel folks - Front End Developer</title>
+	<title>Starter pack</title>
 </head>
 <body>
 	<div id="app"></div>
